// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compute-element-view > view of cloud 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": "manages",
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "id": "cloud.frontend:cloud.backend",
      "label": "requests",
      "parent": "cloud",
      "relations": [
        "cloud.frontend:cloud.backend",
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:amazon",
      "label": "uploads",
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "id": "cloud.backend:email",
      "label": "schedule",
      "parent": null,
      "relations": [
        "cloud.backend:email",
      ],
      "source": "cloud.backend",
      "target": "email",
    },
  ],
  "hash": "4b0570a97ddeaf4745e3affb567130c055a98a01",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
        "cloud.backend:email",
      ],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": [
        "next",
        "old",
      ],
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "container",
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "container",
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
        "cloud.backend:email",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "email",
      "inEdges": [
        "cloud.backend:email",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "email",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": [
        "aws",
      ],
      "technology": null,
      "title": "amazon",
    },
  ],
  "tags": null,
  "title": null,
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud.frontend 1`] = `
{
  "__": "element",
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "cloud.frontend.adminPanel:cloud.backend",
      "label": "fetches",
      "line": "dashed",
      "parent": null,
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "tail": "odiamond",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend",
      "label": "requests",
      "line": "solid",
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend",
    },
  ],
  "hash": "5cd9190303add83e7131f7cf678d24e06f95f08b",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "container",
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend",
        "cloud.frontend.adminPanel:cloud.backend",
      ],
      "parent": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "style": {},
      "tags": [
        "old",
      ],
      "technology": null,
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend",
      ],
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "style": {},
      "tags": [
        "next",
      ],
      "technology": null,
      "title": "dashboard",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend",
        "cloud.frontend.adminPanel:cloud.backend",
      ],
      "kind": "container",
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "backend",
    },
  ],
  "tags": null,
  "title": null,
  "viewOf": "cloud.frontend",
}
`;
